--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -4049,3 +4049,21 @@
     engine: Blink
     engine_version: ""
     family: Chrome
+-
+  user_agent: iBrowser/2.8 Mozilla/5.0 (Linux; Android 4.4.2; itel_it1701 Build/KOT49H) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/30.0.0.0 Safari/537.36
+  client:
+    type: browser
+    name: iBrowser
+    version: "2.8"
+    engine: WebKit
+    engine_version: "537.36"
+    family: Chrome
+-
+  user_agent: iBrowser/26 Mozilla/5.0 (Linux; U; Android 4.3; fa-ir; C6603 Build/10.4.B.0.569) AppleWebKit/534.30 (KHTML, like Gecko) Version/4.0 Mobile Safari/534.30
+  client:
+    type: browser
+    name: iBrowser
+    version: ""
+    engine: WebKit
+    engine_version: "534.30"
+    family: Chrome
