--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -1731,6 +1731,16 @@
   engine:
     default: 'WebKit'
 
+# iBrowser (https://www.goibibo.com/)
+- regex: 'iBrowser/(\d+\.\d+)'
+  name: 'iBrowser'
+  version: '$1'
+
+# iBrowser (https://www.goibibo.com/)
+- regex: 'iBrowser/'
+  name: 'iBrowser'
+  version: ''
+
 #IBrowse
 - regex: 'IBrowse(?:[ /](\d+[\.\d]+))?'
   name: 'IBrowse'
