--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -501,11 +501,11 @@
   name: 'iOS'
   version: '$1'
 
-- regex: 'iOS(?:/|; )(\d+[\.\d]+)'
+- regex: '(?:iPhone ?OS|iOS(?: Version)?)(?:/|; |,)(\d+[\.\d]+)'
   name: 'iOS'
   version: '$1'
 
-- regex: 'CFNetwork/.+ Darwin/(\d+[\.\d]+)(?!.*(?:x86_64|i386))'
+- regex: 'CFNetwork/.+ Darwin/(\d+[\.\d]+)(?!.*(?:x86_64|i386|PowerMac))'
   name: 'iOS'
   versions:
     - regex: 'Darwin/21.2.0'
@@ -554,6 +554,12 @@
       version: '11.4.1'
     - regex: 'Darwin/17.6.0'
       version: '11.4'
+    - regex: 'Darwin/17.5.0'
+      version: '11.3'
+    - regex: 'Darwin/17.4.0'
+      version: '11.2.6'
+    - regex: 'Darwin/17.3.0'
+      version: '11.2'
     - regex: 'CFNetwork/889'
       version: '11.1'
     - regex: 'CFNetwork/887'
@@ -570,6 +576,8 @@
       version: '10.0'
     - regex: 'CFNetwork/808'
       version: '10'
+    - regex: 'CFNetwork/758\.5\.3'
+      version: '9.3.5'
     - regex: 'CFNetwork/758\.4\.3'
       version: '9.3.2'
     - regex: 'CFNetwork/758\.3\.15'
@@ -645,6 +653,14 @@
   name: 'iOS'
   version: '$1'
 
+- regex: 'iPad.+; (\d+[\.\d]+);'
+  name: 'iOS'
+  version: '$1'
+
+- regex: 'iPhone.+; Version (\d+[\.\d]+)'
+  name: 'iOS'
+  version: '$1'
+
 - regex: '(?:Apple-)?(?:iPhone|iPad|iPod)(?:.*Mac OS X.*Version/(\d+\.\d+)|; Opera)?'
   name: 'iOS'
   version: '$1'
@@ -673,7 +689,7 @@
 # Mac
 ##########
 
-- regex: 'CFNetwork/.+ Darwin/(?:[\d\.]+).+(?:x86_64|i386)|(?:x86_64-apple-)?darwin(?:[\d\.]+)'
+- regex: 'CFNetwork/.+ Darwin/(?:[\d\.]+).+(?:x86_64|i386)|(?:x86_64-apple-)?darwin(?:[\d\.]+)|PowerMac'
   name: 'Mac'
   versions:
     - regex: '(?:x86_64-apple-)?Darwin/?21.2.0'
@@ -796,6 +812,8 @@
       version: '10.6.7'
     - regex: '(?:x86_64-apple-)?Darwin/?10.3.0'
       version: '10.6.3'
+    - regex: '(?:x86_64-apple-)?Darwin/?9.8.0'
+      version: '10.5.8'
     - regex: '(?:x86_64-apple-)?Darwin/?9.7.1'
       version: '10.5.7'
     - regex: '(?:x86_64-apple-)?Darwin/?9.6.2'
